# gym

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
app/: __init__.py  main.py
app/api/: dependencies.py  router.py
app/api/routes/: agenda.py  auth.py  machines.py  programs.py  stats.py  workout_templates.py  workouts.py
app/core/: config.py  database.py  security.py
app/domain/: __init__.py  muscles.py  programs.py
app/models/: __init__.py  agenda.py  base.py  machine.py  program.py  session.py  user.py  workout.py  workout_template.py
app/repositories/: agenda.py  machines.py  programs.py  workout_templates.py  workouts.py
app/schemas/: agenda.py  auth.py  machine.py  program.py  stats.py  workout.py  workout_template.py
app/services/: agenda.py  auth.py  exceptions.py  machines.py  programs.py  stats.py  streaks.py  time.py  workout_templates.py  workouts.py
app/static/: index.html  styles.css
deploy/: gym.Caddyfile.example
docker/postgres/: Dockerfile  init-app-user.sh
migrations/: env.py
migrations/versions/: 20260714_0001_initial.py  20260714_0002_drop_sets_and_muscle_groups.py  20260714_0003_weekly_agenda.py  20260714_0004_remove_manual_agenda.py  20260715_0005_workout_programs.py  20260718_0006_reusable_workouts.py  20260719_0007_program_step_dates.py
scripts/: backup.sh  create-secrets.sh  restore.sh
tests/: conftest.py  test_agenda.py  test_api.py  test_programs.py  test_streaks.py  test_workout_templates.py
(+3 files in other folders)
