[project]
name = "gym-pulgaa"
version = "1.0.0"
description = "A self-hosted workout, machine, progress, and streak tracker."
requires-python = ">=3.12,<3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
